team registration styling done

--- a/src/index.scss
+++ b/src/index.scss
@@ -25,6 +25,14 @@ $control-border-width: 2px;
 $input-border-color: transparent;
 $input-shadow: none;
 
+
+//my edits
+.form-container{
+  margin-top: 50px;
+}
+
+
+
 // Import only what you need from Bulma
 @import "../node_modules/bulma/sass/utilities/_all.sass";
 @import "../node_modules/bulma/sass/base/_all.sass";
