skill assessments page done

--- a/src/index.scss
+++ b/src/index.scss
@@ -54,6 +54,12 @@ $input-shadow: none;
   background-color: $green;
 }
 
+.lilbreak{
+  color: $green;
+  background-color: $green;
+  width:50%;
+}
+
 .overview-column {
   border-right: 1px solid $light-grey;
 }
